Some more programs
jQuery Practice

--- a/products.html
+++ b/products.html
@@ -6,7 +6,7 @@
 				.s331{font-style: italic;
 					border-bottom: dotted;
 					color: #eee;
-					background-color: yellow;
+					background-color: yellow; 
 					}
 			</style>
 			<script type="text/javascript" src="PRODUCT_JSON.json"> </script>
@@ -53,3 +53,4 @@
 				}
 			</script>
 			</body>	
+</html>
